fix: increase WASM bundle size limit to 2MB

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,7 +10,7 @@ permissions:
 
 env:
   CACHE_VERSION: v3
-  WASM_MAX_BYTES: "524288" # 512KB
+  WASM_MAX_BYTES: "2097152" # 2MB
   CLI_MAX_BYTES: "52428800" # 50MB
   CLI_ARTIFACT_MAX_BYTES: "73400320" # 70MB
 
